# t-coffee_playground

BioTools/: .cproject  .gitignore  CMakeLists.txt
BioTools/src/lib/HMM/: HMM.cpp  fw_bw.cpp
BioTools/src/lib/Sequence/: Alignment_io.cpp  SequenceSet_io.cpp  aln_analysis.cpp
BioTools/src/lib/utils/: Library.cpp  Library.h  Matrix.h
BioTools/src/programs/tea/: tea.cpp  tea.h
